webhook.yml
---
apiVersion: v1
kind: Service
metadata:
  name: auto-tracing-mutating-webhook
  namespace: observability
  labels:
    app: auto-tracing-mutating-webhook
spec:
  publishNotReadyAddresses: true
  ports:
    - port: 443
      targetPort: 5000
  selector:
    app: auto-tracing-mutating-webhook

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auto-tracing-mutating-webhook
  namespace: observability
  labels:
    app: auto-tracing-mutating-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auto-tracing-mutating-webhook
  template:
    metadata:
      name: auto-tracing-mutating-webhook
      labels:
        app: auto-tracing-mutating-webhook
    spec:
      containers:
        - name: auto-tracing-mutating-webhook
          image: tcz001/auto-tracing-webhook:0.0.6
          imagePullPolicy: Always
          resources:
            limits:
              cpu: 500m
              memory: 128Mi
            requests:
              cpu: 250m
              memory: 64Mi
      imagePullSecrets:
        - name: regcred
---
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: auto-tracing-mutating-webhook
  labels:
    app: auto-tracing-mutating-webhook
webhooks:
  - name: auto-tracing-mutating-webhook.observability.svc.cluster.local
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUR0ekNDQXArZ0F3SUJBZ0lVRWpPckpBZkd6M1RySEhlZCtxeTJsNmlvRWtnd0RRWUpLb1pJaHZjTkFRRUwKQlFBd09qRTRNRFlHQTFVRUF3d3ZRV1J0YVhOemFXOXVJRU52Ym5SeWIyeHNaWElnVjJWaWFHOXZheUJFWlcxdgpJRU5CUURFMk1qUXhOek15T0RJd0hoY05NakV3TmpJd01EY3hORFF5V2hjTk16RXdOakU0TURjeE5EUXlXakE2Ck1UZ3dOZ1lEVlFRRERDOUJaRzFwYzNOcGIyNGdRMjl1ZEhKdmJHeGxjaUJYWldKb2IyOXJJRVJsYlc4Z1EwRkEKTVRZeU5ERTNNekk0TWpDQ0FTSXdEUVlKS29aSWh2Y05BUUVCQlFBRGdnRVBBRENDQVFvQ2dnRUJBTGhleXpyNAorRjRhSENNR2Vs [...]
      service:
        name: auto-tracing-mutating-webhook
        namespace: observability
        path: "/decorate"
    rules:
      - operations: ["CREATE"]
        apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        scope: "Namespaced"
    failurePolicy: Fail
    namespaceSelector:
      matchLabels:
        autotrace: enabled
    admissionReviewVersions: ["v1", "v1beta1"]
    sideEffects: None
